--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,17 +1,18 @@
-<header class="sticky top-0 z-50">
+<header role="banner" class="sticky top-0 z-50">
     <nav class="shadow-lg relative px-4 sm:px-6 lg:px-8 py-5 overflow-hidden"
         style="background: linear-gradient(87.54deg, #0f172a -6.8%, #334155 84.14%)">
         <div class="container mx-auto relative">
             <div class="max-w-7xl mx-auto flex justify-between items-center">
-                <a href="/" class="flex items-center space-x-3 group">
+                <a href="/" class="flex items-center">
                     <img src="/static/icons/philippines.svg"
-                        class="w-8 h-8 sm:w-10 sm:h-10 lg:w-12 lg:h-12 transition-transform group-hover:scale-105"
+                        class="w-8 h-8 sm:w-10 sm:h-10 lg:w-12 lg:h-12"
                         alt="Philippines">
-                    <span class="text-white text-xl sm:text-2xl lg:text-3xl font-light">PH Zipcodes</span>
+                    <span class="text-white sm:text-xl font-light">PH
+                        Zipcodes</span>
                 </a>
                 <div>
                     <a href="/contact"
-                        class="text-white inline-flex items-center px-5 py-2.5 rounded-lg text-sm sm:text-base font-light">
+                        class="text-white inline-flex items-center px-5 py-2.5 text-sm font-light">
                         Contact
                     </a>
                 </div>
