--- a/templates/components/results.html
+++ b/templates/components/results.html
@@ -1,19 +1,20 @@
 {% if results %}
-<div class="space-y-4" id="results">
-    <div class="flex items-center px-6 py-3">
+<div class="space-y-3 mb-8">
+    <div class="flex items-center px-6" id="results-header">
         <img src="/static/icons/file-magnifying-glass-light.svg"
-            class="w-5 h-5 mr-2.5 opacity-80" />
+            class="w-5 h-5 mr-2.5 opacity-80" aria-hidden="true">
         <span class="text-lg font-light">
             Found {{ results|length }} results
         </span>
     </div>
     {% for item in results %}
     <div
-        class="p-6 rounded-xl shadow-sm border transform transition-all duration-300 hover:scale-[1.02] hover:-translate-y-1 hover:shadow-xl">
+        class="p-6 rounded-xl shadow-sm border transform transition-all duration-300 hover:scale-[1.02] hover:-translate-y-1 hover:shadow-xl"
+        id="result-{{ loop.index }}">
         <div class="flex justify-between items-start gap-6">
             <div class="flex-grow text-left">
                 <h3
-                    class="location-name text-lg sm:text-xl lg:text-2xl  text-slate-950 tracking-wide">
+                    class="location-name text-lg sm:text-xl lg:text-2xl tracking-wide">
                     {{ item.city_municipality }}
                 </h3>
                 <div class="mt-3 space-y-2.5">
@@ -27,10 +28,10 @@
             </div>
             <div class="flex-shrink-0">
                 <div
-                    class="zip-badge flex items-center px-6 py-3 rounded-full border ">
+                    class="zip-badge flex items-center px-6 py-3 rounded-full border">
                     <img src="/static/icons/map-pin.svg"
-                        class="w-4 h-4 mr-2.5 opacity-90" />
-                    <span class="text-lg sm:text-xl text-slate-950">
+                        class="w-4 h-4 mr-2.5 opacity-80" aria-hidden="true">
+                    <span class="text-lg sm:text-xl">
                         {{ item.code }}
                     </span>
                 </div>
