🐛 fix: update template paths from components to partials directory

--- a/templates/provinces.html
+++ b/templates/provinces.html
@@ -103,7 +103,7 @@
 
     <div id="provinces-grid" class="mt-6" role="region"
         aria-label="Provinces list">
-        {% include "components/provinces_grid.html" %}
+        {% include "partials/provinces_grid.html" %}
     </div>
 </div>
 
