--- a/templates/regions.html
+++ b/templates/regions.html
@@ -42,7 +42,7 @@
         </button>
     </div>
     <div id="regions-grid" class="mt-6" role="region" aria-label="Regions list">
-        {% include "components/regions_grid.html" %}
+        {% include "partials/regions_grid.html" %}
     </div>
 </div>
 
