--- a/templates/provinces.html
+++ b/templates/provinces.html
@@ -55,7 +55,6 @@
                     class="h-5 w-5 opacity-70">
             </div>
             <input type="text"
-                id="province-search"
                 name="q"
                 placeholder="Enter province name..."
                 class="w-full pl-10 pr-16 py-3 font-light rounded-2xl border shadow-lg focus:outline-none focus:ring-4 ring-gray-300"
@@ -101,7 +100,7 @@
         </div>
     </div>
 
-    <div id="provinces-grid" class="mt-6" role="region"
+    <div id="provinces-grid" class="mt-6" role="provinces"
         aria-label="Provinces list">
         {% include "partials/provinces_grid.html" %}
     </div>
